--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@fontsource/poppins": "^5.2.5",
     "@next/font": "^14.2.15",
     "@radix-ui/react-label": "^2.1.2",
     "@radix-ui/react-slot": "^1.1.2",
@@ -17,7 +18,7 @@
     "framer-motion": "^12.4.7",
     "lucide-react": "^0.476.0",
     "motion": "^12.4.9",
-    "next": "15.2.0",
+    "next": "^15.2.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "swiper": "^11.2.5",
