add the puppeteer core

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "next": "^15.2.3",
     "nodemailer": "^6.10.1",
     "puppeteer": "^24.7.0",
+    "puppeteer-core": "^24.7.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.4.0",
