--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@next/font": "^14.2.15",
     "@radix-ui/react-label": "^2.1.2",
     "@radix-ui/react-slot": "^1.1.2",
+    "chrome-aws-lambda": "^10.1.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dotenv": "^16.4.7",
@@ -26,7 +27,7 @@
     "next": "^15.2.3",
     "nodemailer": "^6.10.1",
     "puppeteer": "^24.7.0",
-    "puppeteer-core": "^24.7.1",
+    "puppeteer-core": "^10.4.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.4.0",
