--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@next/font": "^14.2.15",
     "@radix-ui/react-label": "^2.1.2",
     "@radix-ui/react-slot": "^1.1.2",
+    "@sparticuz/chromium": "^133.0.0",
     "chrome-aws-lambda": "^10.1.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -26,7 +27,7 @@
     "motion": "^12.4.9",
     "next": "^15.2.3",
     "nodemailer": "^6.10.1",
-    "puppeteer": "^24.7.0",
+    "puppeteer": "^24.7.1",
     "puppeteer-core": "^10.4.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
