--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "lucide-react": "^0.476.0",
     "motion": "^12.4.9",
     "next": "^15.2.3",
+    "node-fetch": "^3.3.2",
     "nodemailer": "^6.10.1",
     "os": "^0.1.2",
     "puppeteer": "^24.7.1",
