--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
     "@radix-ui/react-label": "^2.1.2",
     "@radix-ui/react-slot": "^1.1.2",
     "@sparticuz/chromium": "^133.0.0",
-    "chrome-aws-lambda": "^10.1.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dotenv": "^16.4.7",
@@ -29,7 +28,6 @@
     "node-fetch": "^3.3.2",
     "nodemailer": "^6.10.1",
     "os": "^0.1.2",
-    "puppeteer": "^24.7.1",
     "puppeteer-core": "^10.4.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
@@ -47,6 +45,7 @@
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.2.0",
+    "ignore-loader": "^0.1.2",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
