--- a/package.json
+++ b/package.json
@@ -29,10 +29,12 @@
     "node-fetch": "^3.3.2",
     "nodemailer": "^6.10.1",
     "os": "^0.1.2",
+    "puppeteer": "^24.22.2",
     "puppeteer-core": "^10.4.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.4.0",
+    "sonner": "^2.0.7",
     "swiper": "^11.2.5",
     "tailwind-merge": "^3.0.2",
     "tailwindcss-animate": "^1.0.7"
